trybuild-qcell/src/compiletest/tcell-11.stderr
error[E0277]: `Cell<i32>` cannot be shared between threads safely
 --> src/compiletest/tcell-11.rs:9:15
  |
9 |     is_sync::<TCell<Marker, Cell<i32>>>();  // Compile fail
  |               ^^^^^^^^^^^^^^^^^^^^^^^^ `Cell<i32>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Cell<i32>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` or `std::sync::atomic::AtomicI32` instead
  = note: required for `TCell<Marker, Cell<i32>>` to implement `Sync`
note: required by a bound in `is_sync`
 --> src/compiletest/tcell-11.rs:8:19
  |
8 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`
